# gyroid

./: .gitignore  Cargo.toml  README.md  backdrop.blend  basic.blend  go.sh  pc.json
parametric/: Cargo.toml  go.sh
parametric/src/: builder.rs  gyroid.rs  main.rs
splashsurf/: basic.blend1  basic1.blend  basic1.blend1
splashsurf/src/: main.rs
splat/: Cargo.toml
splat/src/: main.rs
src/: main.rs
