[workspace]
members = [
  "./splashsurf"
  , "parametric", "splat"]
resolver = "2"

[workspace.package]
authors = ["martin <martinfrances107@hotmail.com>"]
categories = ["graphics", "Mathematics"]
edition = "2021"
keywords = ["diagram", "graphics"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/martinfrances107/gyroid"
version = "0.1.0"
rust-version = "1.80"

[workspace.dependencies]


[profile.release]
codegen-units = 1
lto = true
panic = "abort"

[profile.dev]
debug = true
